# w37l-ml-services

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements.xt  setup.py  startup.sh
.github/workflows/: azure-container-webapp.yml  docker-image.yml  main_W37L-ML-Services.yml  main_w37l-ml-services.yml  run_tests_on_push.yml
mlservice/src/adapters/: repository_impl.py
src/: app.py  container.py  setup.py
src/adapters/: repository.py  repository_impl.py
src/apis/: controller.py  setup.py
src/domain/: model.py
src/mlservice/: __init__.py  app.py  container.py
src/mlservice/adapters/: repository.py  repository_impl.py
src/mlservice/apis/: controller.py  setup.py
src/mlservice/model/: model.py
src/mlservice/service/: service.py  service_impl.py
src/mlservice/service/utils/: count_vectorizer.joblib  data_processing.py  lda_model.joblib  lda_trend_model.joblib  linear_svc_model.joblib  multi_label_binarizer.joblib  vectorizer.joblib
src/service/: service.py  service_impl.py
tests/: test_repository.py
tests/integration_test/: integration_test.py
tests/unit_test/: test_model.py  test_repository.py  test_service.py
training_models/: recommendation.ipynb  test1.xlsx  text_analysis.ipynb  trending_topic.ipynb
