[tool.poetry]
name = "MLService"
version = "0.1"
description = ""
authors = ["Emiliano Busso <emijos3@gmail.com>, Alfonso Ridao <alfonso@ridao.ar>"]

[tool.poetry.dependencies]
python = "^3.11.7"
dependency-injector = "^4.39.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"